tests/res/traits/error_is_value.say
null is null; // error: `is` needs a type name
// @split
null is 0; // error: `is` needs a type name
// @split
null is true; // error: `is` needs a type name
// @split
null is false; // error: `is` needs a type name
// @split
say s = 0;
null is s; // error: 's' is not a type or trait
// @split
trait T {}
say s = T;
null is s; // error: 's' is not a type or trait